--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="EmojiNice" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\sprites\EmojiNice.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="EmojiSad" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\sprites\sad-emoji.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="EmojiShocked" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\sprites\EmojiShocked.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
